# fp-first-lab

./: .gitignore  README.md  dune-project  euler24.md  euler7.md  fp_first_lab.opam  requirements.md
.github/workflows/: ci.yml
lib/: dune  euler24.ml  euler24.mli  euler7.ml  euler7.mli  prime.ml  prime.mli  util.ml  util.mli
python/: euler.py
test/: dune  euler24_test.ml  euler7_test.ml
