opam-version: "2.0"
version: "0.1.0"
synopsis: "Functional programming labs: Project Euler #7 and #24 on OCaml"
description: "Solutions for FP Lab #1 tasks with multiple functional implementations and tests (Project Euler problems 7 and 24)."
maintainer: "ivanzuk"
authors: "ivanzuk"
license: "MIT"
homepage: "https://github.com/ivanzuk/fp-first-lab"
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.10"}
  "alcotest" {with-test}
  "ocamlformat" {with-test & = "0.28.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ivanzuk/fp-first-lab.git"
